--- a/AppleGold/cart.html
+++ b/AppleGold/cart.html
@@ -299,8 +299,8 @@
                     <!-- Title -->
                     <h1 class="cart__title section-title light">Корзина</h1>
 
-                    <!-- Table -->
-                    <div class="d-flex flex-wrap justify-content-between w-100 mt-4">
+                    <!-- Row -->
+                    <div class="d-flex flex-wrap justify-content-between align-items-start w-100 mt-4 ps-r">
                         <!-- Column -->
                         <div class="col-md-8 col-12 order-md-1 order-2 mt-md-0 mt-5">
                             <!-- Top -->
@@ -428,56 +428,56 @@
                         </div>
 
                         <!-- Column -->
-                        <div class="col-md-3 col-12 cart-right order-md-1 order-1">
-                            <!-- Total -->
-                            <div class="cart-total">
-                                <!-- Title -->
-                                <h3 class="cart-total__title">Ваша корзина</h3>
+                        <aside class="sticky-sidebar col-md-3 col-12 order-md-1 order-1">
+							<!-- Total -->
+							<div class="cart-total">
+								<!-- Title -->
+								<h3 class="cart-total__title">Ваша корзина</h3>
 
-                                <!-- Count -->
-                                <div class="cart-total__count mt-4">
-                                    <span>3 товара</span>
-                                    <span>345 690₽</span>
-                                </div>
+								<!-- Count -->
+								<div class="cart-total__count mt-4">
+									<span>3 товара</span>
+									<span>345 690₽</span>
+								</div>
 
-                                <!-- Line -->
-                                <hr class="my-5">
+								<!-- Line -->
+								<hr class="my-5">
 
-                                <!-- Total-cost -->
-                                <div class="cart-total__cost">
-                                    <span>ИТОГО</span>
-                                    <span>345 690₽</span>
-                                </div>
+								<!-- Total-cost -->
+								<div class="cart-total__cost">
+									<span>ИТОГО</span>
+									<span>345 690₽</span>
+								</div>
 
-                                <!-- Button -->
-                                <a href="#" class="cart-total__btn btn btn-light mt-4">оформить заказ</a>
-                            </div>
+								<!-- Button -->
+								<a href="#" class="cart-total__btn btn btn-light mt-4">оформить заказ</a>
+							</div>
 
-                            <!-- Bonus -->
-                            <div class="cart-bonus mt-2">
-                                <!-- Title -->
-                                <h3 class="cart-bonus__title">Бонусы</h3>
+							<!-- Bonus -->
+							<div class="cart-bonus mt-2">
+								<!-- Title -->
+								<h3 class="cart-bonus__title">Бонусы</h3>
 
-                                <!-- Text -->
-                                <p class="cart-bonus__text mt-3">
-                                    Вам недоступны бонусы так как вы не авторизованы
-                                    <br><br>
-                                    <a href="#">Авторизоваться</a>
-                                </p>
-                            </div>
+								<!-- Text -->
+								<p class="cart-bonus__text mt-3">
+									Вам недоступны бонусы так как вы не авторизованы
+									<br><br>
+									<a href="#">Авторизоваться</a>
+								</p>
+							</div>
 
-                            <!-- Bonus -->
-                            <div class="cart-bonus mt-2">
-                                <!-- Title -->
-                                <h3 class="cart-bonus__title">Бонусы</h3>
+							<!-- Bonus -->
+							<div class="cart-bonus mt-2">
+								<!-- Title -->
+								<h3 class="cart-bonus__title">Бонусы</h3>
 
-                                <!-- Form -->
-                                <form action="#" class="cart-bonus-form form mt-3">
-                                    <input type="text" class="form__field" placeholder="Введите промокод">
-                                    <button type="submit" class="cart-bonus-form__btn btn">применить</button>
-                                </form>
-                            </div>
-                        </div>
+								<!-- Form -->
+								<form action="#" class="cart-bonus-form form mt-3">
+									<input type="text" class="form__field" placeholder="Введите промокод">
+									<button type="submit" class="cart-bonus-form__btn btn">применить</button>
+								</form>
+							</div>
+                        </aside>
                     </div>
 
                     <!-- Also bought -->
@@ -499,7 +499,7 @@
                                 <a href="#" class="product__title">IPhone 16 Pro Max 1 тб White Titanium</a>
 
                                 <!-- Price -->
-                                <div class="d-flex flex-md-row flex-column align-items-md-end mt-1">
+                                <div class="d-flex flex-md-row flex-column align-items-md-end mt-2">
                                     <span class="product__price">190 990 ₽</span>
 
                                     <!-- Overprice -->
@@ -522,7 +522,7 @@
                                 <a href="#" class="product__title">IPhone 16 Pro Max 1 тб White Titanium</a>
 
                                 <!-- Price -->
-                                <div class="d-flex flex-md-row flex-column align-items-md-end mt-1">
+                                <div class="d-flex flex-md-row flex-column align-items-md-end mt-2">
                                     <span class="product__price">190 990 ₽</span>
 
                                     <!-- Overprice -->
@@ -545,7 +545,7 @@
                                 <a href="#" class="product__title">IPhone 16 Pro Max 1 тб White Titanium</a>
 
                                 <!-- Price -->
-                                <div class="d-flex flex-md-row flex-column align-items-md-end mt-1">
+                                <div class="d-flex flex-md-row flex-column align-items-md-end mt-2">
                                     <span class="product__price">190 990 ₽</span>
 
                                     <!-- Overprice -->
@@ -568,7 +568,7 @@
                                 <a href="#" class="product__title">IPhone 16 Pro Max 1 тб White Titanium</a>
 
                                 <!-- Price -->
-                                <div class="d-flex flex-md-row flex-column align-items-md-end mt-1">
+                                <div class="d-flex flex-md-row flex-column align-items-md-end mt-2">
                                     <span class="product__price">190 990 ₽</span>
 
                                     <!-- Overprice -->
@@ -591,7 +591,7 @@
                                 <a href="#" class="product__title">IPhone 16 Pro Max 1 тб White Titanium</a>
 
                                 <!-- Price -->
-                                <div class="d-flex flex-md-row flex-column align-items-md-end mt-1">
+                                <div class="d-flex flex-md-row flex-column align-items-md-end mt-2">
                                     <span class="product__price">190 990 ₽</span>
 
                                     <!-- Overprice -->
@@ -614,7 +614,7 @@
                                 <a href="#" class="product__title">IPhone 16 Pro Max 1 тб White Titanium</a>
 
                                 <!-- Price -->
-                                <div class="d-flex flex-md-row flex-column align-items-md-end mt-1">
+                                <div class="d-flex flex-md-row flex-column align-items-md-end mt-2">
                                     <span class="product__price">190 990 ₽</span>
 
                                     <!-- Overprice -->
@@ -646,7 +646,7 @@
                                 <a href="#" class="product__title">IPhone 16 Pro Max 1 тб White Titanium</a>
 
                                 <!-- Price -->
-                                <div class="d-flex flex-md-row flex-column align-items-md-end mt-1">
+                                <div class="d-flex flex-md-row flex-column align-items-md-end mt-2">
                                     <span class="product__price">190 990 ₽</span>
 
                                     <!-- Overprice -->
@@ -669,7 +669,7 @@
                                 <a href="#" class="product__title">IPhone 16 Pro Max 1 тб White Titanium</a>
 
                                 <!-- Price -->
-                                <div class="d-flex flex-md-row flex-column align-items-md-end mt-1">
+                                <div class="d-flex flex-md-row flex-column align-items-md-end mt-2">
                                     <span class="product__price">190 990 ₽</span>
 
                                     <!-- Overprice -->
@@ -692,7 +692,7 @@
                                 <a href="#" class="product__title">IPhone 16 Pro Max 1 тб White Titanium</a>
 
                                 <!-- Price -->
-                                <div class="d-flex flex-md-row flex-column align-items-md-end mt-1">
+                                <div class="d-flex flex-md-row flex-column align-items-md-end mt-2">
                                     <span class="product__price">190 990 ₽</span>
 
                                     <!-- Overprice -->
@@ -715,7 +715,7 @@
                                 <a href="#" class="product__title">IPhone 16 Pro Max 1 тб White Titanium</a>
 
                                 <!-- Price -->
-                                <div class="d-flex flex-md-row flex-column align-items-md-end mt-1">
+                                <div class="d-flex flex-md-row flex-column align-items-md-end mt-2">
                                     <span class="product__price">190 990 ₽</span>
 
                                     <!-- Overprice -->
@@ -738,7 +738,7 @@
                                 <a href="#" class="product__title">IPhone 16 Pro Max 1 тб White Titanium</a>
 
                                 <!-- Price -->
-                                <div class="d-flex flex-md-row flex-column align-items-md-end mt-1">
+                                <div class="d-flex flex-md-row flex-column align-items-md-end mt-2">
                                     <span class="product__price">190 990 ₽</span>
 
                                     <!-- Overprice -->
@@ -761,7 +761,7 @@
                                 <a href="#" class="product__title">IPhone 16 Pro Max 1 тб White Titanium</a>
 
                                 <!-- Price -->
-                                <div class="d-flex flex-md-row flex-column align-items-md-end mt-1">
+                                <div class="d-flex flex-md-row flex-column align-items-md-end mt-2">
                                     <span class="product__price">190 990 ₽</span>
 
                                     <!-- Overprice -->
