--- a/AppleGold/catalog.html
+++ b/AppleGold/catalog.html
@@ -638,7 +638,7 @@
                             <!-- Product -->
                             <div class="product grid-product">
                                 <!-- Image -->
-                                <div class="product__img" style="background-image: url('img/product_img.jpg');">
+                                <div class="product__img grid-product__img" style="background-image: url('img/product_img.jpg');">
                                     <!-- Favorite -->
                                     <button class="product__favorite add-to-favorite added">
 										<i class="fa-solid fa-heart"></i>
@@ -658,7 +658,7 @@
                                 <a href="#" class="product__title">IPhone 16 Pro Max 1 тб White Titanium</a>
 
                                 <!-- Price -->
-                                <div class="d-flex flex-md-row flex-column align-items-md-end mt-1">
+                                <div class="d-flex flex-md-row flex-column align-items-md-end mt-2">
                                     <span class="product__price">190 990 ₽</span>
 
                                     <!-- Overprice -->
@@ -672,7 +672,7 @@
                             <!-- Product -->
                             <div class="product grid-product">
                                 <!-- Image -->
-                                <div class="product__img" style="background-image: url('img/product_img.jpg');">
+                                <div class="product__img grid-product__img" style="background-image: url('img/product_img.jpg');">
                                     <!-- Favorite -->
                                     <button class="product__favorite add-to-favorite"><i class="fa-solid fa-heart"></i></button>
                                 </div>
@@ -681,7 +681,7 @@
                                 <a href="#" class="product__title">IPhone 16 Pro Max 1 тб White Titanium</a>
 
                                 <!-- Price -->
-                                <div class="d-flex flex-md-row flex-column align-items-md-end mt-1">
+                                <div class="d-flex flex-md-row flex-column align-items-md-end mt-2">
                                     <span class="product__price">190 990 ₽</span>
 
                                     <!-- Overprice -->
@@ -695,7 +695,7 @@
                             <!-- Product -->
                             <div class="product grid-product">
                                 <!-- Image -->
-                                <div class="product__img" style="background-image: url('img/product_img.jpg');">
+                                <div class="product__img grid-product__img" style="background-image: url('img/product_img.jpg');">
                                     <!-- Favorite -->
                                     <button class="product__favorite add-to-favorite"><i class="fa-solid fa-heart"></i></button>
                                 </div>
@@ -704,7 +704,7 @@
                                 <a href="#" class="product__title">IPhone 16 Pro Max 1 тб White Titanium</a>
 
                                 <!-- Price -->
-                                <div class="d-flex flex-md-row flex-column align-items-md-end mt-1">
+                                <div class="d-flex flex-md-row flex-column align-items-md-end mt-2">
                                     <span class="product__price">190 990 ₽</span>
 
                                     <!-- Overprice -->
@@ -718,7 +718,7 @@
                             <!-- Product -->
                             <div class="product grid-product">
                                 <!-- Image -->
-                                <div class="product__img" style="background-image: url('img/product_img.jpg');">
+                                <div class="product__img grid-product__img" style="background-image: url('img/product_img.jpg');">
                                     <!-- Favorite -->
                                     <button class="product__favorite add-to-favorite"><i class="fa-solid fa-heart"></i></button>
                                 </div>
@@ -727,7 +727,7 @@
                                 <a href="#" class="product__title">IPhone 16 Pro Max 1 тб White Titanium</a>
 
                                 <!-- Price -->
-                                <div class="d-flex flex-md-row flex-column align-items-md-end mt-1">
+                                <div class="d-flex flex-md-row flex-column align-items-md-end mt-2">
                                     <span class="product__price">190 990 ₽</span>
 
                                     <!-- Overprice -->
@@ -741,7 +741,7 @@
                             <!-- Product -->
                             <div class="product grid-product">
                                 <!-- Image -->
-                                <div class="product__img" style="background-image: url('img/product_img.jpg');">
+                                <div class="product__img grid-product__img" style="background-image: url('img/product_img.jpg');">
                                     <!-- Favorite -->
                                     <button class="product__favorite add-to-favorite"><i class="fa-solid fa-heart"></i></button>
                                 </div>
@@ -750,7 +750,7 @@
                                 <a href="#" class="product__title">IPhone 16 Pro Max 1 тб White Titanium</a>
 
                                 <!-- Price -->
-                                <div class="d-flex flex-md-row flex-column align-items-md-end mt-1">
+                                <div class="d-flex flex-md-row flex-column align-items-md-end mt-2">
                                     <span class="product__price">190 990 ₽</span>
 
                                     <!-- Overprice -->
@@ -764,7 +764,7 @@
                             <!-- Product -->
                             <div class="product grid-product">
                                 <!-- Image -->
-                                <div class="product__img" style="background-image: url('img/product_img.jpg');">
+                                <div class="product__img grid-product__img" style="background-image: url('img/product_img.jpg');">
                                     <!-- Favorite -->
                                     <button class="product__favorite add-to-favorite"><i class="fa-solid fa-heart"></i></button>
                                 </div>
@@ -773,7 +773,7 @@
                                 <a href="#" class="product__title">IPhone 16 Pro Max 1 тб White Titanium</a>
 
                                 <!-- Price -->
-                                <div class="d-flex flex-md-row flex-column align-items-md-end mt-1">
+                                <div class="d-flex flex-md-row flex-column align-items-md-end mt-2">
                                     <span class="product__price">190 990 ₽</span>
 
                                     <!-- Overprice -->
@@ -787,7 +787,7 @@
                             <!-- Product -->
                             <div class="product grid-product">
                                 <!-- Image -->
-                                <div class="product__img" style="background-image: url('img/product_img.jpg');">
+                                <div class="product__img grid-product__img" style="background-image: url('img/product_img.jpg');">
                                     <!-- Favorite -->
                                     <button class="product__favorite add-to-favorite"><i class="fa-solid fa-heart"></i></button>
                                 </div>
@@ -796,7 +796,7 @@
                                 <a href="#" class="product__title">IPhone 16 Pro Max 1 тб White Titanium</a>
 
                                 <!-- Price -->
-                                <div class="d-flex flex-md-row flex-column align-items-md-end mt-1">
+                                <div class="d-flex flex-md-row flex-column align-items-md-end mt-2">
                                     <span class="product__price">190 990 ₽</span>
 
                                     <!-- Overprice -->
@@ -810,7 +810,7 @@
                             <!-- Product -->
                             <div class="product grid-product">
                                 <!-- Image -->
-                                <div class="product__img" style="background-image: url('img/product_img.jpg');">
+                                <div class="product__img grid-product__img" style="background-image: url('img/product_img.jpg');">
                                     <!-- Favorite -->
                                     <button class="product__favorite add-to-favorite"><i class="fa-solid fa-heart"></i></button>
                                 </div>
@@ -819,7 +819,7 @@
                                 <a href="#" class="product__title">IPhone 16 Pro Max 1 тб White Titanium</a>
 
                                 <!-- Price -->
-                                <div class="d-flex flex-md-row flex-column align-items-md-end mt-1">
+                                <div class="d-flex flex-md-row flex-column align-items-md-end mt-2">
                                     <span class="product__price">190 990 ₽</span>
 
                                     <!-- Overprice -->
@@ -833,7 +833,7 @@
                             <!-- Product -->
                             <div class="product grid-product">
                                 <!-- Image -->
-                                <div class="product__img" style="background-image: url('img/product_img.jpg');">
+                                <div class="product__img grid-product__img" style="background-image: url('img/product_img.jpg');">
                                     <!-- Favorite -->
                                     <button class="product__favorite add-to-favorite"><i class="fa-solid fa-heart"></i></button>
                                 </div>
@@ -842,7 +842,7 @@
                                 <a href="#" class="product__title">IPhone 16 Pro Max 1 тб White Titanium</a>
 
                                 <!-- Price -->
-                                <div class="d-flex flex-md-row flex-column align-items-md-end mt-1">
+                                <div class="d-flex flex-md-row flex-column align-items-md-end mt-2">
                                     <span class="product__price">190 990 ₽</span>
 
                                     <!-- Overprice -->
