--- a/AppleGold/index.html
+++ b/AppleGold/index.html
@@ -482,7 +482,7 @@
 						<!-- Item -->
 						<div class="main-slider-item">
 							<!-- Column -->
-							<div class="col-md-6 col-12 d-flex flex-column justify-content-between ps-r main-slider-item__content">
+							<div class="col-md-6 col-12 d-flex flex-column justify-content-between ps-r main-slider-item__content px-2">
 								<!-- Title -->
 								<h2 class="section-title main-slider-item__title">не копите - разделите</h2>
 
@@ -500,7 +500,7 @@
 						<!-- Item -->
 						<div class="main-slider-item">
 							<!-- Column -->
-							<div class="col-md-6 col-12 d-flex flex-column justify-content-between ps-r main-slider-item__content">
+							<div class="col-md-6 col-12 d-flex flex-column justify-content-between ps-r main-slider-item__content px-2">
 								<!-- Title -->
 								<h2 class="section-title main-slider-item__title">покупайте для бизнеса</h2>
 
@@ -518,7 +518,7 @@
 						<!-- Item -->
 						<div class="main-slider-item">
 							<!-- Column -->
-							<div class="col-md-6 col-12 d-flex flex-column justify-content-between ps-r main-slider-item__content">
+							<div class="col-md-6 col-12 d-flex flex-column justify-content-between ps-r main-slider-item__content px-2">
 								<!-- Title -->
 								<h2 class="section-title main-slider-item__title">Давайте меняться!</h2>
 
@@ -536,7 +536,7 @@
 						<!-- Item -->
 						<div class="main-slider-item">
 							<!-- Column -->
-							<div class="col-md-6 col-12 d-flex flex-column justify-content-between ps-r main-slider-item__content">
+							<div class="col-md-6 col-12 d-flex flex-column justify-content-between ps-r main-slider-item__content px-2">
 								<!-- Title -->
 								<h2 class="section-title main-slider-item__title">КОЛЕСО ФОРТУНЫ-ПОКУПАЙ И КРУТИ. УДАЧА РЯДОМ</h2>
 
