--- a/AppleGold/product.html
+++ b/AppleGold/product.html
@@ -295,10 +295,12 @@
             <div class="container-lg catalog pt-5">
                 <!--! Product page -->
                 <main class="product-page pb-5">
+					<a href="catalog.html" class="product-page__back d-block mb-md-5 mb-4">← НАЗАД</a>
+
                     <!-- Row -->
-                    <div class="d-md-flex w-100">
+                    <div class="d-md-flex align-items-start w-100 ps-r">
                         <!-- Column:thumbnail -->
-                        <div class="d-flex">
+                        <div class="d-flex ps-md-5 sticky-sidebar">
                             <!-- Vertical slider -->
                             <div class="vertical-slider">
                                 <!-- Item -->
@@ -352,17 +354,8 @@
                                 арт. 23-345-1
                             </span>
 
-                            <!-- Price -->
-                            <div class="d-md-flex d-none align-items-end mt-4">
-                                <!-- Price -->
-                                <span class="product-content__price">127 990₽</span>
-
-                                <!-- Overprice -->
-                                <span class="product-content__overprice">190 990 ₽</span>
-                            </div>
-
                             <!-- Filters -->
-                            <div class="mt-md-5 mt-4">
+                            <div class="mt-md-5 mt-4 pb-md-4">
                                 <!-- Filter -->
                                 <div class="product-content-filter">
                                     <h3>Объем памяти:</h3>
@@ -432,7 +425,7 @@
                             </div>
 
                             <!-- Buttons -->
-                            <div class="d-flex mt-md-5 mt-3">
+                            <div class="d-flex mt-4">
                                 <!-- Cart button -->
                                 <button class="product-content__btn btn btn-light">в корзину</button>
 
