--- a/AppleGold/checkout.html
+++ b/AppleGold/checkout.html
@@ -300,7 +300,7 @@
                     <h1 class="section-title light">Оформление заказа</h1>
 
                     <!-- Row -->
-                    <div class="d-flex flex-md-row flex-column-reverse justify-content-between flex-wrap w-100 mt-4">
+                    <div class="d-flex justify-content-between align-items-start flex-wrap w-100 mt-4 ps-r">
                         <!-- Column -->
                         <div class="col-md-5 col-12">
                             <form action="#" class="form checkout-form">
@@ -400,7 +400,7 @@
                         </div>
 
                         <!-- Column -->
-                        <div class="col-md-3 col-12 d-md-block d-none">
+                        <aside class="sticky-sidebar col-md-3 col-12 d-md-block d-none">
 							<!-- Total -->
                             <div class="cart-total">
                                 <!-- Title -->
@@ -449,7 +449,7 @@
                                     <button type="submit" class="cart-bonus-form__btn btn">применить</button>
                                 </form>
                             </div>
-						</div>
+						</aside>
                     </div>
                 </main>
 
