--- a/AppleGold/product.html
+++ b/AppleGold/product.html
@@ -341,6 +341,11 @@
                                     <!-- Item -->
                                     <span class="product-slugs__item">Рассрочка 0%</span>
                                 </div>
+
+								<!-- Favorite(Mobile) -->
+                                <button class="product-page__favorite-btn added add-to-favorite">
+                                    <i class="fa-solid fa-heart"></i>
+                                </button>
                             </div>
                         </div>
 
@@ -429,8 +434,8 @@
                                 <!-- Cart button -->
                                 <button class="product-content__btn btn btn-light">в корзину</button>
 
-                                <!-- Favorite -->
-                                <button class="product-content__favorite-btn added add-to-favorite">
+                                <!-- Favorite(PC) -->
+                                <button class="product-page__favorite-btn d-md-flex d-none added add-to-favorite">
                                     <i class="fa-solid fa-heart"></i>
                                 </button>
                             </div>
