--- a/AppleGold/dashboard.html
+++ b/AppleGold/dashboard.html
@@ -300,7 +300,7 @@
                         <!-- Section title -->
                         <h2 class="section-title light">ПРОФИЛЬ</h2>
 
-                        <!-- Button -->
+                        <!-- Button(PC) -->
                         <button class="dashboard__edit-profile-btn open-modal-btn d-md-block d-none btn btn-dark" target-modal="#edit-profile">редактировать</button>
                     </div>
 
@@ -379,11 +379,11 @@
                         </div>
                     </div>
 
-                    <!-- Button -->
+                    <!-- Button(Mobile) -->
                     <button class="dashboard__edit-profile-btn d-md-none btn btn-dark mt-3">редактировать</button>
 
                     <!-- Box -->
-                    <div class="dashboard-box mt-3">
+                    <div class="dashboard-box mt-md-3 mt-5">
                         <!-- Title -->
                         <h3 class="dashboard-box__title">Ваши сертификаты</h3>
 
