--- a/AppleGold/cart.html
+++ b/AppleGold/cart.html
@@ -483,10 +483,10 @@
                     <!-- Also bought -->
                     <section class="products-section my-5">
                         <!-- Section title -->
-                        <h2 class="section-title light">с этим товаром покупают</h2>
+                        <h2 class="section-title light mb-md-4">с этим товаром покупают</h2>
 
                         <!-- Row -->
-                        <div class="products-section-row d-flex justify-content-between w-100 flex-wrap pb-5 mt-md-4">
+                        <div class="products-section-row d-flex justify-content-between flex-wrap pb-5">
                             <!-- Product -->
                             <div class="product">
                                 <!-- Image -->
@@ -630,10 +630,10 @@
                     <!-- Similar products -->
                     <section class="products-section my-5">
                         <!-- Section title -->
-                        <h2 class="section-title light">похожие товары</h2>
+                        <h2 class="section-title light mb-md-4">похожие товары</h2>
 
                         <!-- Row -->
-                        <div class="products-section-row d-flex justify-content-between w-100 flex-wrap mt-md-4">
+                        <div class="products-section-row d-flex justify-content-between flex-wrap">
                             <!-- Product -->
                             <div class="product">
                                 <!-- Image -->
