--- a/KuTech/about.html
+++ b/KuTech/about.html
@@ -34,7 +34,7 @@
 				<!-- PC: Menu -->
 				<ul class="header-pc-menu d-md-flex d-none">
 					<!-- Item -->
-					<li class="header-pc-menu__item"><a href="#">About Us</a></li>
+					<li class="header-pc-menu__item current-menu-item"><a href="#">About Us</a></li>
 
 					<!-- Item -->
 					<li class="header-pc-menu__item"><a href="#">Equipment</a></li>
@@ -318,10 +318,9 @@
 				<!-- Column -->
 				<div class="col-lg-7 col-6">
 					<ul class="footer-menu">
-						<li><a href="#">Home</a></li>
 						<li><a href="#">About Us</a></li>
 						<li><a href="#">Equipment</a></li>
-						<li><a href="#">System</a></li>
+						<li><a href="#">Solutions</a></li>
 						<li><a href="#">Contact</a></li>
 					</ul>
 				</div>
