--- a/KuTech/catalog.html
+++ b/KuTech/catalog.html
@@ -3419,10 +3419,9 @@
 				<!-- Column -->
 				<div class="col-lg-7 col-6">
 					<ul class="footer-menu">
-						<li><a href="#">Home</a></li>
 						<li><a href="#">About Us</a></li>
 						<li><a href="#">Equipment</a></li>
-						<li><a href="#">System</a></li>
+						<li><a href="#">Solutions</a></li>
 						<li><a href="#">Contact</a></li>
 					</ul>
 				</div>
