--- a/KuTech/equipment.html
+++ b/KuTech/equipment.html
@@ -37,7 +37,7 @@
 					<li class="header-pc-menu__item"><a href="#">About Us</a></li>
 
 					<!-- Item -->
-					<li class="header-pc-menu__item"><a href="#">Equipment</a></li>
+					<li class="header-pc-menu__item current-menu-item"><a href="#">Equipment</a></li>
 
 					<!-- Item -->
 					<li class="header-pc-menu__item"><a href="#">Solutions</a></li>
@@ -464,10 +464,9 @@
 				<!-- Column -->
 				<div class="col-lg-7 col-6">
 					<ul class="footer-menu">
-						<li><a href="#">Home</a></li>
 						<li><a href="#">About Us</a></li>
 						<li><a href="#">Equipment</a></li>
-						<li><a href="#">System</a></li>
+						<li><a href="#">Solutions</a></li>
 						<li><a href="#">Contact</a></li>
 					</ul>
 				</div>
