--- a/KuTech/index.html
+++ b/KuTech/index.html
@@ -153,37 +153,37 @@
 				<!-- Column -->
 				<div class="intro-column">
 					<!-- Count -->
-					<span class="intro-column__count">+10</span>
+					<span class="intro-column__count" data-aos="fade-up">+10</span>
 
 					<!-- Text -->
-					<span class="intro-column__text">years of perfecting <br> parking solutions</span>
+					<span class="intro-column__text" data-aos="fade-up">years of perfecting <br> parking solutions</span>
 				</div>
 
 				<!-- Column -->
 				<div class="intro-column">
 					<!-- Count -->
-					<span class="intro-column__count">+100</span>
+					<span class="intro-column__count" data-aos="fade-up">+100</span>
 
 					<!-- Text -->
-					<span class="intro-column__text">dedicated professionals <br> on our team</span>
+					<span class="intro-column__text" data-aos="fade-up">dedicated professionals <br> on our team</span>
 				</div>
 
 				<!-- Column -->
 				<div class="intro-column">
 					<!-- Count -->
-					<span class="intro-column__count">+56</span>
+					<span class="intro-column__count" data-aos="fade-up">+56</span>
 
 					<!-- Text -->
-					<span class="intro-column__text">cities trust our <br> parking solutions</span>
+					<span class="intro-column__text" data-aos="fade-up">cities trust our <br> parking solutions</span>
 				</div>
 
 				<!-- Column -->
 				<div class="intro-column">
 					<!-- Count -->
-					<span class="intro-column__count">+20</span>
+					<span class="intro-column__count" data-aos="fade-up">+20</span>
 
 					<!-- Text -->
-					<span class="intro-column__text">million payment <br> transactions monthly</span>
+					<span class="intro-column__text" data-aos="fade-up">million payment <br> transactions monthly</span>
 				</div>
 			</div>
 
@@ -388,10 +388,9 @@
 				<!-- Column -->
 				<div class="col-lg-7 col-6">
 					<ul class="footer-menu">
-						<li><a href="#">Home</a></li>
 						<li><a href="#">About Us</a></li>
 						<li><a href="#">Equipment</a></li>
-						<li><a href="#">System</a></li>
+						<li><a href="#">Solutions</a></li>
 						<li><a href="#">Contact</a></li>
 					</ul>
 				</div>
