--- a/KuTech/contact.html
+++ b/KuTech/contact.html
@@ -43,7 +43,7 @@
 					<li class="header-pc-menu__item"><a href="#">Solutions</a></li>
 
 					<!-- Item -->
-					<li class="header-pc-menu__item"><a href="#">Contact</a></li>
+					<li class="header-pc-menu__item current-menu-item"><a href="#">Contact</a></li>
 				</ul>
 
 				<!-- PC: language -->
@@ -205,10 +205,9 @@
 				<!-- Column -->
 				<div class="col-lg-7 col-6">
 					<ul class="footer-menu">
-						<li><a href="#">Home</a></li>
 						<li><a href="#">About Us</a></li>
 						<li><a href="#">Equipment</a></li>
-						<li><a href="#">System</a></li>
+						<li><a href="#">Solutions</a></li>
 						<li><a href="#">Contact</a></li>
 					</ul>
 				</div>
