--- a/KuTech/solutions.html
+++ b/KuTech/solutions.html
@@ -40,7 +40,7 @@
 					<li class="header-pc-menu__item"><a href="#">Equipment</a></li>
 
 					<!-- Item -->
-					<li class="header-pc-menu__item"><a href="#">Solutions</a></li>
+					<li class="header-pc-menu__item current-menu-item"><a href="#">Solutions</a></li>
 
 					<!-- Item -->
 					<li class="header-pc-menu__item"><a href="#">Contact</a></li>
@@ -840,7 +840,7 @@
 				<h2 class="section-title">Interface</h2>
 
 				<!-- Tabs -->
-				<div class="solutions-interface-nav mt-3">
+				<div class="solutions-interface-nav d-md-flex justify-content-between mt-3">
 					<!-- Tab -->
 					<button class="solutions-interface-nav__btn btn tab active" tab-target="interface-1">Operator workstation</button>
 
@@ -1282,10 +1282,9 @@
 				<!-- Column -->
 				<div class="col-lg-7 col-6">
 					<ul class="footer-menu">
-						<li><a href="#">Home</a></li>
 						<li><a href="#">About Us</a></li>
 						<li><a href="#">Equipment</a></li>
-						<li><a href="#">System</a></li>
+						<li><a href="#">Solutions</a></li>
 						<li><a href="#">Contact</a></li>
 					</ul>
 				</div>
